[gd_scene load_steps=8 format=3 uid="uid://by21837lveovw"]

[ext_resource type="Script" path="res://scripts/05_Laura_Office/room_05_laura_office.gd" id="1_0waur"]
[ext_resource type="Texture2D" uid="uid://qj4xkvglwk5k" path="res://assets/locations/05_Laura_office.png" id="1_wpiiq"]
[ext_resource type="PackedScene" uid="uid://vn8ay56opuf" path="res://scenes/phone.tscn" id="2_fgceg"]
[ext_resource type="Texture2D" uid="uid://c5wnbt1gt01ox" path="res://assets/locations/05_Laura_Office/Laura_desk.png" id="3_b06w1"]
[ext_resource type="Script" path="res://scripts/05_Laura_Office/talk_to_laura.gd" id="4_p0f3v"]
[ext_resource type="Script" path="res://scripts/05_Laura_Office/back_to_lobby.gd" id="5_5gbrn"]
[ext_resource type="Texture2D" uid="uid://c8vhnhsv2ck34" path="res://assets/locations/05_Laura_Office/cosas_mesa.png" id="7_ujp57"]

[node name="room_05_Laura_office" type="Node2D"]
script = ExtResource("1_0waur")

[node name="05LauraOffice" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("1_wpiiq")

[node name="Phone" parent="." instance=ExtResource("2_fgceg")]

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 224.0
offset_top = 103.0
offset_right = 332.0
offset_bottom = 249.0
texture_normal = ExtResource("3_b06w1")
script = ExtResource("4_p0f3v")

[node name="Label" type="Label" parent="TextureButton"]
visible = false
z_index = 1
layout_mode = 0
offset_left = -5.0
offset_top = 101.0
offset_right = 75.0
offset_bottom = 113.0
theme_override_font_sizes/font_size = 8
text = "Talk to Laura"

[node name="TextureButton2" type="TextureButton" parent="."]
offset_left = 16.0
offset_top = 115.0
offset_right = 126.0
offset_bottom = 313.0
script = ExtResource("5_5gbrn")

[node name="Label" type="Label" parent="TextureButton2"]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 61.0
offset_right = 104.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 9
text = "Back to Lobby"

[node name="CosasMesa" type="Sprite2D" parent="."]
position = Vector2(355, 235)
texture = ExtResource("7_ujp57")

[connection signal="button_down" from="TextureButton" to="TextureButton" method="_on_button_down"]
[connection signal="mouse_entered" from="TextureButton" to="TextureButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="TextureButton" method="_on_mouse_exited"]
[connection signal="button_down" from="TextureButton2" to="TextureButton2" method="_on_button_down"]
[connection signal="mouse_entered" from="TextureButton2" to="TextureButton2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton2" to="TextureButton2" method="_on_mouse_exited"]
